feat: :heavy_plus_sign: add drizzle & sqlite

--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -1,17 +1,20 @@
 {
-	"expo": {
-		"scheme": "roomietive",
-		"userInterfaceStyle": "automatic",
-		"orientation": "default",
-		"web": {
-			"bundler": "metro"
-		},
-		"name": "roomietive",
-		"slug": "roomietive",
-		"plugins": ["expo-font"],
-		"experiments": {
-			"typedRoutes": true,
-			"reactCompiler": true
-		}
-	}
+  "expo": {
+    "scheme": "roomietive",
+    "userInterfaceStyle": "automatic",
+    "orientation": "default",
+    "web": {
+      "bundler": "metro"
+    },
+    "name": "roomietive",
+    "slug": "roomietive",
+    "plugins": [
+      "expo-font",
+      "expo-sqlite"
+    ],
+    "experiments": {
+      "typedRoutes": true,
+      "reactCompiler": true
+    }
+  }
 }
