feat: :tada: add web, oxlint, convex, alchemy, better-auth
Re-init project with better-t-stack "pnpm create better-t-stack@latest roomietive --frontend tanstack-router native-uniwind --backend convex --runtime none --api none --auth better-auth --payments none --database none --orm none --db-setup none --package-manager pnpm --no-git --web-deploy cloudflare --server-deploy none --install --addons oxlint turborepo --examples none"

Re-initializes project with "pnpm create better-t-stack@latest roomietive --frontend tanstack-router native-uniwind --backend convex --runtime none --api none --auth better-auth --payments none --database none --orm none --db-setup none --package-manager pnpm --no-git --web-deploy cloudflare --server-deploy none --install --addons oxlint turborepo --examples none"

--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -8,10 +8,7 @@
     },
     "name": "roomietive",
     "slug": "roomietive",
-    "plugins": [
-      "expo-font",
-      "expo-sqlite"
-    ],
+    "plugins": ["expo-font"],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
