--- a/bts.jsonc
+++ b/bts.jsonc
@@ -3,24 +3,20 @@
 
 {
   "$schema": "https://r2.better-t-stack.dev/schema.json",
-  "version": "3.6.5",
-  "createdAt": "2025-12-01T17:14:12.826Z",
+  "version": "3.18.0",
+  "createdAt": "2026-01-20T12:26:04.858Z",
   "database": "none",
   "orm": "none",
-  "backend": "none",
+  "backend": "convex",
   "runtime": "none",
-  "frontend": [
-    "native-uniwind"
-  ],
-  "addons": [
-    "biome",
-    "turborepo"
-  ],
+  "frontend": ["tanstack-router", "native-uniwind"],
+  "addons": ["oxlint", "turborepo"],
   "examples": [],
-  "auth": "none",
+  "auth": "better-auth",
+  "payments": "none",
   "packageManager": "pnpm",
   "dbSetup": "none",
   "api": "none",
-  "webDeploy": "none",
+  "webDeploy": "cloudflare",
   "serverDeploy": "none"
 }
