--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "roomietive",
   "private": true,
-  "type": "module",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
+  "type": "module",
   "scripts": {
-    "check": "biome check --write .",
     "dev": "turbo dev",
     "build": "turbo build",
     "check-types": "turbo check-types",
     "dev:native": "turbo -F native dev",
-    "dev:web": "turbo -F web dev"
+    "dev:web": "turbo -F web dev",
+    "dev:server": "turbo -F @roomietive/backend dev",
+    "dev:setup": "turbo -F @roomietive/backend dev:setup",
+    "deploy": "turbo -F @roomietive/infra deploy",
+    "destroy": "turbo -F @roomietive/infra destroy",
+    "check": "oxlint && oxfmt --write"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@roomietive/env": "workspace:*",
+    "dotenv": "catalog:",
+    "zod": "catalog:"
+  },
   "devDependencies": {
-    "turbo": "^2.5.4",
-    "@biomejs/biome": "^2.2.0"
+    "@cloudflare/workers-types": "^4.20251213.0",
+    "@roomietive/config": "workspace:*",
+    "oxfmt": "^0.19.0",
+    "oxlint": "^1.34.0",
+    "turbo": "^2.6.3",
+    "typescript": "catalog:"
   },
   "packageManager": "pnpm@10.18.3"
 }
